--- a/css/utils.css
+++ b/css/utils.css
@@ -24,7 +24,6 @@ html {
 }
 
 body {
-    overflow-x: hidden;
     font-family: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: var(--dim-white);
 }
